# gl-rdr

./: CONTEXT.md  Cargo.toml  README.md  build.rs
docs/adr/: 0001-rdr-is-a-pure-passthrough-client.md  0002-lightning-cli-fidelity.md  0003-load-external-descriptors.md
src/: descriptor.rs  help.rs  lib.rs  main.rs  params.rs  transcode.rs
tests/: cli_offline.rs  descriptor_loading.rs  transcode_roundtrip.rs
tests/fixtures/: addon.proto  transcode.proto
