[package]
name = "gl-rdr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
description = "Lightweight generic gRPC pass-through CLI for Greenlight-hosted Core Lightning nodes."
readme = "README.md"
license = "MIT"
repository = "https://github.com/nepet/gl-rdr"
keywords = ["lightning", "greenlight", "grpc", "cli", "bitcoin"]
categories = ["command-line-utilities", "network-programming"]
include = ["src/**", "build.rs", "proto/**", "README.md", "LICENSE", "Cargo.toml"]

[[bin]]
name = "glrdr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
hex = "0.4"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
# Local path dep for development. Cargo resolves gl-client's workspace deps
# (tonic, vls-core, cln-grpc) via the greenlight workspace root. Switch to
# `gl-client = "0.6"` (crates.io) before publishing gl-rdr.
gl-client = { path = "../../greenlight/master/public/libs/gl-client" }

[build-dependencies]
protox = "0.7"
prost = "0.13"

[dev-dependencies]
protox = "0.7"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
assert_cmd = "2"
predicates = "3"
